--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,3 +9,8 @@ spring:
 
 server:
   port: 8082
+  url: localhost
+
+app-config:
+  clientId:
+    "397300109176-efllj9hjd6tmmq7b0pk11mbqpl64fm2e.apps.googleusercontent.com"
