--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   build-timesheet:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./timesheet-module
     steps:
       - name: Set up QEMU
         id: qemu
@@ -28,7 +25,7 @@ jobs:
         with:
           java-version: 1.11
       - name: Build timesheet with Maven
-        working-directory: ./timesheet-module
+        working-directory: ./
         run: mvn clean install
       - name: Login to DockerHub
         uses: docker/login-action@v1
