--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Publish timesheet to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./timesheet-module
+          context: ./
           push: true
           platforms: linux/amd64
           tags: d4n14l/timesheet-module:latest
